# pyzet

./: .git-blame-ignore-revs  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: pre-commit.yaml  pre-commit.yml  tests.yml
docs/: README.md  supported-editors.md  tutorial.md  zettel-formatting.md
src/pyzet/: __main__.py  cli.py  config.py  constants.py  exceptions.py  grep.py  main.py  ops.py  sample_config.py  sed.py  show.py  utils.py  zet.py  zettel.py
testing/: constants.py  pyzet-missing-repo.yaml  pyzet-wrong.yaml  pyzet.yaml
testing/zet/: README.md
testing/zet-tutorial/: README.md
testing/zet-tutorial/docs/20220126232605/: README.md
testing/zet-tutorial/zettels/20220123233028/: README.md
testing/zet-tutorial/zettels/20220126232605/: README.md
testing/zet/20211016223643/: README.md
testing/zet/docs/20211016205158/: README.md
testing/zet/zettels/20211016205158/: README.md
testing/zet/zettels/20211016223643/: README.md
testing/zet/zettels/20220101220852/: README.md
testing/zet/zettels/another_folder/: another_file
tests/: conftest.py  grep_test.py  io_test.py  main_test.py  sample_config_test.py  show_test.py  zet_test.py  zettel_test.py
tests/files/: test-pyzet-config-wrong.toml  test-pyzet-config.toml
