[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.coverage.report]
fail_under = 1

[tool.isort]
add_imports = [
    "from __future__ import annotations"
]
force_single_line = true
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "testing.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = [
    "E",
    "F",
    "W",
    "UP",
    # "B",
    # "SIM",
    "PT",
    # "D",
    # "N",
    # "FBT",
    # "A",
    "C4",
    # "DTZ",
    "ISC",
    "LOG",
    "INP",
    "PIE",
    "RSE",
    "SLF",
    "SLOT",
    "TID",
    "TCH",
    "ARG",
    "TD",
    "ERA",
    "PGH",
    # "TRY",
    "FLY",
    "FURB",
    "RUF",
]
ignore = [
    "D100",
    "D103",
    "D104",
    "D107",
    "D203",
    "D213",
    "E501",
    "ISC001",
    "RUF001",
]
