[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyzet"
version = "0.12.0"
description = "Simple note-taking with CLI & Git integration."
authors = [{name = "Tomasz Wojdat", email = "tpwojdat@gmail.com"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
keywords = ["cli", "git", "markdown", "notes", "zettelkasten"]
urls = {Homepage = "https://github.com/tpwo/pyzet"}
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
pyzet = "pyzet.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.coverage.report]
fail_under = 1

[tool.isort]
add_imports = [
    "from __future__ import annotations",
]
force_single_line = true
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "testing.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = [
    "E",
    "F",
    "W",
    "UP",
    "B",
    "SIM",
    "PT",
    "D",
    "N",
    "FBT",
    "A",
    "C4",
    "DTZ",
    "ISC",
    "LOG",
    "INP",
    "PIE",
    "RSE",
    "SLF",
    "SLOT",
    "TID",
    "TCH",
    "ARG",
    "TD",
    "ERA",
    "PGH",
    # "TRY",
    "FLY",
    "FURB",
    "RUF",
]
ignore = [
    "D100",
    "D103",
    "D104",
    "D107",
    "D203",
    "D213",
    "E501",
    "ISC001",
    "LOG015",
    "RUF001",
    "TD002",
]
