[metadata]
name = pyzet
version = 0.3.0
description = A small CLI tool that makes it easier to use Zettelkasten with git repos.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wojdatto/pyzet.git
author = Tomasz Wojdat
author_email = wojdatto@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    pyyaml>=6.0
    importlib-metadata>=0.12;python_version<"3.8"
python_requires = >=3.7
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyzet = pyzet.main:main

[flake8]
max-line-length = 88
max-complexity = 11
extend-ignore = E203

[coverage:run]
branch = True
omit =
    */__main__.py

[coverage:report]
show_missing = True
skip_covered = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
