[metadata]
name = pyzet
version = 0.11.0
description = Simple note-taking with CLI & Git integration.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tpwo/pyzet
author = Tomasz Wojdat
author_email = tpwojdat@gmail.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
keywords = cli, git, markdown, notes, zettelkasten

[options]
packages = find:
install_requires =
    pyyaml>=6.0
python_requires = >=3.8
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyzet = pyzet.main:main

[flake8]
extend-ignore = E203

[coverage:run]
plugins = covdefaults

[coverage:report]
fail_under = 90

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
